Added support for configurable (base) path prefix

--- a/core/src/main/resources/io/questdb/site/conf/server.conf
+++ b/core/src/main/resources/io/questdb/site/conf/server.conf
@@ -99,6 +99,9 @@
 #http.security.interruptor.iterations.per.check=2000000
 #http.security.interruptor.buffer.size=32
 
+# Make sure the path prefix starts and ends with a "/"
+#http.path.prefix=/
+
 ################ Cairo settings ##################
 
 # directory for storing db tables and metadata. this directory is inside the server root directory provided at startup
